RESOLVED FIXED 24686
Hit testing child RenderLayers of transformed layers is broken
https://bugs.webkit.org/show_bug.cgi?id=24686
Summary Hit testing child RenderLayers of transformed layers is broken
Simon Fraser (smfr)
Reported 2009-03-18 17:00:37 PDT
There's a problem in hit testing through 3d content, when you encounter a layer that is a child of layer with a 3d transform. It picks that child layer, even if there's another layer in front of it.
Attachments
Testcase (3.44 KB, text/html)
2009-03-18 17:01 PDT, Simon Fraser (smfr)
no flags
Patch, testcases, changelog (20.41 KB, patch)
2009-03-18 22:09 PDT, Simon Fraser (smfr)
hyatt: review+
Simon Fraser (smfr)
Comment 1 2009-03-18 17:01:17 PDT
Created attachment 28738 [details] Testcase In the testcase, note how 'event-grabber' no longer gets hover style when you hover over one of the inner blue boxes.
Simon Fraser (smfr)
Comment 2 2009-03-18 22:09:11 PDT
Created attachment 28746 [details] Patch, testcases, changelog
Dave Hyatt
Comment 3 2009-03-19 11:48:51 PDT
Comment on attachment 28746 [details] Patch, testcases, changelog > + if (hitTestContents(request, tempResult, layerBounds, hitTestPoint, HitTestSelf) && > + isHitCandidate(this, false, zOffsetForContentsPtr, unflattenedTransformState.get())) { Seems like funny indentation to me here. I usually just line up multiple lines with && or || chains, e.g., if (hitTestContents(request, tempResult, layerBounds, hitTestPoint, HitTestSelf) && isHitCandidate(this, false, zOffsetForContentsPtr, unflattenedTransformState.get())) { r=me
Darin Adler
Comment 4 2009-03-19 11:55:33 PDT
I normally put the && or the || on the beginning of the new line like this: if (hitTestContents(request, tempResult, layerBounds, hitTestPoint, HitTestSelf) && isHitCandidate(this, false, zOffsetForContentsPtr, unflattenedTransformState.get())) { <body> I also indent one extra level so it doesn't have the same indentation as the body. It seems like we should settle on a style and get it into the WebKit coding style guide document.
Simon Fraser (smfr)
Comment 5 2009-03-19 12:14:32 PDT
Note You need to log in before you can comment on or make changes to this bug.